Initial Release Commit

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bypass-cors",
   "version": "1.0.0",
-  "description": "Proxy requests to bypass CORS restrictions",
+  "description": "Bypass CORS is a Node.js application that creates a proxy server to bypass Cross-Origin Resource Sharing (CORS) issues. It allows you to make cross-origin requests to APIs that would otherwise be blocked by the browser's same-origin policy.",
   "main": "./bin/index.js",
   "bin": {
     "bypass-cors": "./bin/index.js"
